problems with the return from editVC from masterVC

--- a/Persistency/Base.lproj/Main.storyboard
+++ b/Persistency/Base.lproj/Main.storyboard
@@ -103,7 +103,7 @@
         <!--Edit View Controller-->
         <scene sceneID="iEn-Cp-V6S">
             <objects>
-                <viewController id="HR9-Tt-mVa" customClass="EditViewController" customModule="Persistency" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="editVC" id="HR9-Tt-mVa" customClass="EditViewController" customModule="Persistency" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Zym-oX-fAF">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
